fixed styling
fixed a problem with styling where text was not centered properly

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -9,6 +9,7 @@ footer{
 .Icons{
     color: whitesmoke ;
    padding: 2rem;
+   font-size: 10px ;
    text-align: center;
 
 }
